[tool.poetry]
name = "shutup"
version = "0.1.2"
description = "Stop python warnings, no matter what!"
authors = ["Fred Israel <fredpublico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
