[tool.poetry]
name = "shutup"
version = "0.2.0"
description = "Stop python warnings, no matter what!"
authors = ["Fred Israel <fredpublico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
# using feature not released yet on pypi
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]

# requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

